<!-- Application Strings -->
<resources>
    <string name="app_name">ICAR-NIANP Smart Tools</string>
    <string name="nav_header_title" translatable="false">Smart Tools</string>
    <string name="nav_header_subtitle" translatable="false">ICAR-NIANP</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!-- Menu Items -->
    <string name="menu_home">Home</string>
    <string name="menu_feeds">Feeds</string>
    <string name="menu_tmrmaker">TMR Maker</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">More</string>
    <string name="menu_about">About</string>
    <string name="menu_example_tmr">Example for TMR</string>
    <string name="menu_example_cm">Example for Concentrate Mixture</string>

    <string name="dm_value" translatable="false">DM: %1$.2f KG</string>
    <string name="cp_value" translatable="false">CP: %1$.2f g</string>
    <string name="tdn_value" translatable="false">TDN: %1$.2f g</string>

    <!-- Application Preferences -->
    <string name="application">Application</string>
    <string name="theme_switch">Day/Night</string>
    <string name="theme_switch_desc">Toggle between day and night themes</string>
    <string name="language">Language</string>
    <string name="language_desc">Change language</string>
    <string name="use_bottom_navigation">Use Bottom Navigation</string>
    <string name="use_bottom_navigation_desc">Toggle between bottom navigation and side navigation</string>

    <!-- Feed Formulation -->
    <string name="body_weight_kg">Body Weight (Kg)</string>
    <string name="milk_yield_kg">Milk Yield (Kg)</string>
    <string name="milk_fat">Milk Fat (%)</string>
    <string name="pregnant_m">Pregnant (M)</string>

    <string name="select_cattle">Select a cattle</string>
    <string name="nutrient_requirements">Cattle details of %1$s</string>
    <string name="select_feeds">Select feeds for %1$s</string>
    <string name="feeds_to_be_included_in_ration_for">Feeds to be included in ration for %1$s</string>

    <string name="tmrmaker_title">Feed Formulation for Cattle and Buffalo</string>
    <string name="tmrmaker_greeting">We are happy to introduce an Android application for making total mixed ration for dairy cow and milch buffalo.\nClick one of the options below and follow the pages</string>
    <string name="about_text_block_1">This mobile application has been developed by a team of scientist at ICAR-National Institute of Animal Nutrition and Physiology (NIANP), Bengaluru.\nThis application is useful for the farmer to prepare balanced total mixed ration for a cow or buffalo on least cost basis with available feed ingredients.\nNutrient requirements are calculated on the basis of ICAR (2013) requirements and examples are given based on the practical field condition.\nIt is encouraged to use more number of locally available ingredients for deriving best combination of least cost feed formulation.</string>
    <string name="about_text_block_2">Disclaimer: The calculated ration formation is based on the input given by the user not by the developer.\nThe ration formulated by this app is only guideline and it cannot be claimed for any commercial or legal purpose.\nThe loss or any misguidance of the application cannot be claimed from the developer.\nIt is a guideline of ration formulation.\nIt may be verified by the Animal Nutritionist before feeding to the animals.\n© ICAR-NIANP, Bengaluru, 2021</string>
    <string name="acknowledgement">Acknowledgement:</string>
    <string name="software_assistance">Software Assistance:</string>
    <string name="software_assistance_desc">• Dr. Vishal Patil (Jain University)\n• Mr. Vrishab Jain (Jain University)\n• Mr. Jery J.S (Jain University)\n• Dr. Radha Gupta</string>
    <string name="app_concept_and_development">App Concept and Development:</string>
    <string name="app_concept_and_development_desc">• Dr. D.Rajendran\n• Dr. N K S Gowda\n• Dr. S Ananadan\n• Dr. SBN Rao\n• Dr. DT Pal\n• Dr. M Gopi\n• Dr. Raghavendra Bhatta</string>

    <string name="welcome_to_icar_nianp">Welcome to ICAR-NIANP</string>
    <string name="icar_nianp_website"><a href="http://nianp.res.in/">ICAR-NIANP Website</a></string>
    <string name="icar_nianp_desc">The ICAR-National Institute of Animal Nutrition and Physiology (ICAR-NIANP) was established on 24th November 1995 at Bangalore under the aegis of Indian Council of Agricultural Research (ICAR), New Delhi.\n\nThe Institute is mandated to conduct basic and fundamental research with respect to animal feed resource management using physiological-nutritional approaches to improve animal productivity and profitability of livestock farmers.\n\nThe institute\'s new campus was inaugurated by the Honourable Union Minister for Agriculture, Shri Rajnath Singhji on 13th August 2003.</string>
    <string name="cattle_and_buffalo_feed_formulation">Cattle and Buffalo Feed Formulation</string>
    <string name="icar_nianp_2024">© ICAR-NIANP 2024</string>

</resources>