<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_anim_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_feeds"
            android:icon="@drawable/ic_anim_feeds"
            android:title="@string/menu_feeds" />
        <item
            android:id="@+id/nav_tmrmaker"
            android:icon="@drawable/ic_anim_info"
            android:title="@string/menu_tmrmaker" />
        <item
            android:id="@+id/nav_example_tmr"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_example_tmr" />
        <item
            android:id="@+id/nav_example_cm"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_example_cm" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>

</menu>