<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_anim_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_feeds"
            android:icon="@drawable/ic_anim_feeds"
            android:title="@string/menu_feeds" />
        <item
            android:id="@+id/nav_tmrmaker"
            android:icon="@drawable/ic_anim_info"
            android:title="@string/menu_tmrmaker" />
        <item
            android:id="@+id/nav_more"
            android:layout_gravity="bottom"
            android:icon="@drawable/ic_anim_more"
            android:title="@string/menu_more" />
    </group>

</menu>