<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tmrmaker">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jery.feedformulation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_feeds"
        android:name="com.jery.feedformulation.ui.feedslist.FeedsFragment"
        android:label="@string/menu_feeds"
        tools:layout="@layout/fragment_feeds" />

    <fragment
        android:id="@+id/nav_tmrmaker"
        android:name="com.jery.feedformulation.ui.tmrmaker.TmrmakerFragment"
        android:label="@string/menu_tmrmaker"
        tools:layout="@layout/fragment_tmrmaker" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jery.feedformulation.ui.settings.SettingsFragment"
        android:label="@string/menu_settings" />

</navigation>