<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.more.AboutFragment"
    tools:ignore="RtlSymmetry">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/welcome_to_icar_nianp"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:text="@string/icar_nianp_desc"
                    android:textSize="18sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvIcarNianpWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:autoLink="web"
                    android:text="@string/icar_nianp_website"
                    android:textSize="18sp"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
</androidx.core.widget.NestedScrollView>

