<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tmrmaker.NutrientSelectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBW"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/body_weight_kg"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sprBW"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/bw_array"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMY"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/milk_yield_kg"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sprMY"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/my_array"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtMF"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/milk_fat"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sprMF"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/mf_array"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtPr"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:text="@string/pregnant_m"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sprPr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/pr_array"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/txtDM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="DM (KG)"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="CP (g)"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtTDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="20dp"
                android:text="TDN (g)"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>